@@ -1,9 +1,11 @@
 package it.unibo.generics.graph;
 
+import it.unibo.generics.graph.Impl.BreadthFirstSearch;
 import it.unibo.generics.graph.Impl.GraphImpl;
 import it.unibo.generics.graph.api.Graph;
 
 import java.util.Arrays;
+import java.util.List;
 import java.util.Objects;
 import java.util.Set;
 
@@ -23,11 +25,11 @@ public final class UseGraph {
         /*
          * Test your graph implementation(s) by calling testGraph
          */
-        testGraph(new GraphImpl<>());
+        testGraph(new GraphImpl<>(new BreadthFirstSearch<>()));
     }
 
-    private static void testGraph(final Graph<String> graph) {
-        graph.addNode("a");
+    private static void testGraph(final Graph<Integer> graph) {
+        /*graph.addNode("a");
         graph.addNode("b");
         graph.addNode("c");
         graph.addNode("d");
@@ -37,21 +39,33 @@ public final class UseGraph {
         graph.addEdge("c", "d");
         graph.addEdge("d", "e");
         graph.addEdge("c", "a");
-        graph.addEdge("e", "a");
+        graph.addEdge("e", "a");*/
+
+        graph.addNode(0);
+        graph.addNode(1);
+        graph.addNode(2);
+        graph.addNode(3);
+        graph.addNode(4);
+        graph.addEdge(0, 1);
+        graph.addEdge(0, 2);
+        graph.addEdge(0, 3);
+        graph.addEdge(2, 3);
+        graph.addEdge(2, 4);
+
         /*
          * Should be ["a","b","c","d","e"], in any order
          */
-        assertIsAnyOf(graph.nodeSet(), Set.of(splitOnWhiteSpace("a b c d e")));
+        // assertIsAnyOf(graph.nodeSet(), Set.of(splitOnWhiteSpace("a b c d e")));
         /*
          * ["d","a"], in any order
          */
-        assertIsAnyOf(graph.linkedNodes("c"), Set.of(splitOnWhiteSpace("a d")));
+       // assertIsAnyOf(graph.linkedNodes("c"), Set.of(splitOnWhiteSpace("a d")));
         /*
          * Either the path b,c,a or b,c,d,e,a
          */
         assertIsAnyOf(
-            graph.getPath("b", "a"),
-            Arrays.asList(splitOnWhiteSpace("b c a")),
+            graph.getPath(0, 3),
+            Arrays.asList(List.of(0, 1, 2, 3, 4)),
             Arrays.asList(splitOnWhiteSpace("b c d e a"))
         );
     }
